# CppND-Capstone-Flappy-Bird

./: CMakeLists.txt  README.md
include/: bird.h  controller.h  game.h  obstacle.h  renderer.h  scene_state.h  types.h
src/: bird.cpp  controller.cpp  game.cpp  main.cpp  obstacle.cpp  renderer.cpp  scene_state.cpp  types.cpp
